IntelliJ/tests/valid/listdefault.masl
/* valid: list ID defaults to first element */
hello: "hi".
Set hello To "hello".
Write hello.