IntelliJ/tests/invalid/semantics/undeclared.masl
/* undeclared identifier */
Set list (1) To "hi".